Change log for zeit.web
=======================

2.47 (unreleased)
-----------------

- ZON-2250: Add label to storystream

- MAINT: Add WAI-ARIA roles, states, and properties for accordion component

- ZON-2592: Use dogpile.cache instead of beaker for caching/memcache


2.46 (2016-01-06)
-----------------

- HOTFIX: Change webtrekk contentId


2.45 (2016-01-06)
-----------------

- ZON-2230: Multiple Infoboxes do not collapse anymore (includes code makeover)

- ZON-2579: Set sourcetype for Webtrekk

- MAINT: Fix pysolr error handling of non-ascii server responses

- FIX: Handle community read errors during recommendation

- ZON-2278: Make video teasers detectable on dynamic CPs

- ZON-2591: Make logo pointer appear in IE>=10 again

- HOTFIX: Change timeout for community user_info


2.44 (2016-01-04)
-----------------

- ZON-2157: Expose function hook for additional scripts

- ZON-2572: Prepare runtime-adjustable blacklist

- ZON-2233: Fix FF < 27 Navigation

- ZON-2586: Move instantarticle feed from special URL (and hard-coded solr
  query) to view name `/rss-instantarticle` on any centerpage

- FIX: make getMobileView available under old namespace (for Meetrics)

- FIX: Handle proxied solr results in author feeds properly


2.43 (2015-12-28)
-----------------

- FIX: Wrapper-Apps: Set IVW identifier to `mobzeit` at all times

- FIX: Don't set a marker if you're gonna overwrite the function anyway


2.42 (2015-12-28)
-----------------

- ZON-2533: Fix character count at comment reply form

- ZON-1935: Fix non clickable image bug on fullwidth teaser

- MAINT: Update config, disable ZMO tweet count, fix #536

- FIX: Fix non clickable image bug an fullwidth teaser


2.41 (2015-12-22)
-----------------

- QUICKFIX: Set IVW to always use hybrid delivery method .h


2.40 (2015-12-21)
-----------------

- ZON-2588: Remove trailing slash from host to avoid double slash in URL path

- FIX: Force window reload after premoderation overlay close
