@@ -45,11 +45,13 @@ def app_settings(mockserver):
         'pyramid.debug_routematch': False,
         'pyramid.debug_templates': False,
         'dogpile_cache.backend': 'dogpile.cache.memory',
-        'dogpile_cache.regions': 'default_term, short_term, long_term',
+        'dogpile_cache.regions': (
+            'default_term, short_term, long_term, session'),
         'dogpile_cache.short_term.expiration_time': '60',
         'dogpile_cache.default_term.expiration_time': '300',
         'dogpile_cache.long_term.expiration_time': '3600',
-        'session.type': 'memory',
+        'dogpile_cache.session.expiration_time': '2',
+        'session.reissue_time': '1',
         'liveblog_backend_url': mockserver.url + '/liveblog/backend',
         'liveblog_status_url': mockserver.url + '/liveblog/status',
         # XXX I'd rather put None here and change the settings for a specific
