@@ -10,6 +10,10 @@ Change log for zeit.web
 
 - ZON-2592: Use dogpile.cache instead of beaker for caching/memcache
 
+- MAINT: Use our own session backend instead of beaker (stores data in
+  memcache, but does not use a separate cookie -- which doesn't work anyway
+  since /login-state is an ESI, so cookies it sends are eaten by Varnish)
+
 
 2.46 (2016-01-06)
 -----------------
